# lokal-ml

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: ci.yml
registry/: models.json
